--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.title {
+    text-align: center;
+}
+
 .login-form {
     display: flex;
     flex-direction: column;
@@ -27,8 +31,38 @@
     align-items: center;
     border: 3px solid black;
     border-radius: 5px;
-    width: 500px;
+    width: 300px;
     margin: 0.5em;
     padding: 0.5em;
     word-break: break-word;
+}
+
+.logged-user {
+    display: flex;
+    margin-bottom: 2em;
+}
+
+
+.logged-user>button {
+    height: fit-content;
+    align-self: center;
+    margin-left: 0.5em;
+}
+
+.blog-form-container {
+    width: 300px;
+}
+
+.blog-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.blog-form>input {
+    margin-bottom: 1em;
+}
+
+.blog-form>button {
+    width: 30%;
+    height: 2em;
 }
