--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+.content {
+    display: flex;
+    flex-direction: column;
+}
+
 .title {
     text-align: center;
 }
@@ -31,7 +36,8 @@
     border: 3px solid black;
     border-radius: 5px;
     width: 300px;
-    margin: 0.5em;
+    margin-top: 2em;
+    margin-right: 0.5em;
     padding: 0.5em;
     word-break: break-word;
 }
@@ -49,7 +55,14 @@
 }
 
 .blog-form-container {
-    width: 300px;
+    width: 40vw;
+    padding: 1rem;
+    border: 2px solid green;
+    border-radius: 2px;
+}
+
+.blog-form-container>h3 {
+    text-align: center;
 }
 
 .blog-form {
